--- a/public/dusoft_duana/documentosbodegas/views/I008/index.html
+++ b/public/dusoft_duana/documentosbodegas/views/I008/index.html
@@ -31,28 +31,13 @@
                     <div class="row">
                         <div class="col-md-4">
                             <fieldset>
-                                <legend>Farmacia Origen</legend> 
-                                <div class="row">
-                                    <div class="col-md-7">                                          
-                                        <ui-select ng-change="onBuscarDocumentosTraslado()" ng-model="documento_ingreso.bodega_origen" theme="select2" class="form-control selectgeneral pull-left" ng-disabled="validarDesdeLink">
-                                            <ui-select-match  placeholder="Seleccionar Farmacia">{{ $select.selected.descripcion}}</ui-select-match>
-                                            <ui-select-choices repeat="bodega in bodegas | filter:$select.search">
-                                                {{ bodega.descripcion}}
-                                            </ui-select-choices>
-                                        </ui-select>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </div>
-                        <div class="col-md-4">
-                            <fieldset>
                                 <legend>Documento</legend> 
                                 <div class="row">
                                     <div class="col-md-7">                                          
                                         <ui-select ng-change="onBuscarProductosTraslado()" ng-model="documento_ingreso.documento_traslado" theme="select2" class="form-control selectgeneral pull-left" ng-disabled="validarDesdeLink">
-                                            <ui-select-match  placeholder="Seleccionar Documento">{{ $select.selected.prefijo}}-{{ $select.selected.numero}}</ui-select-match>
+                                            <ui-select-match  placeholder="Seleccionar Documento">{{ $select.selected.despacho}}</ui-select-match>
                                             <ui-select-choices repeat="documento in documentosTraslado | filter:$select.search">
-                                                {{ documento.prefijo}}-{{ documento.numero}}
+                                                {{ documento.despacho}}
                                             </ui-select-choices>
                                         </ui-select>
                                     </div>
