--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
@@ -161,28 +161,22 @@
                                     <i class="glyphicon glyphicon-paperclip btnImagen"></i>
                                     <button class="btn btn-sm btn-danger pull-right btnImagen" ng-disabled="datos_view.estadoRegistro == 1" ng-click="onBtnBorrarImagen(imagen)"><i class="glyphicon glyphicon-trash"></i></button>
                                     <button class="btn btn-sm btn-success pull-right btnImagen" ng-click="onBtnPreview(imagen)"><i class="glyphicon glyphicon-zoom-in"></i></button>
-                                   
-                                    
                                 </td>
                             </tr>
-
                         </tbody>
                     </table-->
                 </div>
-                
-                <div class="modal-footer col-md-12">                                
-
+                <div class="modal-footer col-md-12">
                     <button class="btn btn-default" ng-click="regresarListaDespachosAprobados()">
                         <span class="glyphicon glyphicon-ok" ></span> Regresar
-                    </button>  
-
-                    <button class="btn btn-default" ng-disabled="datos_view.estadoRegistro == 1 || datos_view.existenciaDocumento == true" ng-click="aprobarDespacho()">
+                    </button>
+                    <button class="btn btn-default" ng-disabled="despachoId != 0 || datos_view.estadoRegistro == 1 || datos_view.existenciaDocumento == true" ng-click="aprobarDespacho()">
                         <span class="glyphicon glyphicon-ok" ></span> Guardar 
-                    </button>  
-                    
+                    </button>
                     <span >
-                        <label for="files" class="btn btn-default"><i class="glyphicon glyphicon-paperclip"></i> Adjuntar imagen</label>
-                        <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" ng-disabled="despachoId == 0 || documentoDespachoAprobado.obtenerImagenes().length == 4 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)"  capture/>
+                        <label for="files" class="btn btn-default" ng-disabled="despachoId == 0 || documentoDespachoAprobado.obtenerImagenes().length == 4 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)"><i class="glyphicon glyphicon-paperclip"></i> Adjuntar imagen</label>
+                        <!-- <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" onchange="angular.element(this).scope().subirArchivo(this.files)"  capture/> -->
+                        <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" ng-disabled="despachoId == 0 || documentoDespachoAprobado.obtenerImagenes().length == 4 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)" capture/>
                     </span>
                 </div>  
             </div>
