--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
@@ -174,9 +174,9 @@
                         <span class="glyphicon glyphicon-ok" ></span> Guardar 
                     </button>
                     <span >
-                        <label for="files" class="btn btn-default" ng-disabled="despachoId == 0 || documentoDespachoAprobado.obtenerImagenes().length == 4 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)"><i class="glyphicon glyphicon-paperclip"></i> Adjuntar imagen</label>
+                        <label for="files" class="btn btn-default" ng-disabled="despachoId == 0 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)"><i class="glyphicon glyphicon-paperclip"></i> Adjuntar imagen</label>
                         <!-- <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" onchange="angular.element(this).scope().subirArchivo(this.files)"  capture/> -->
-                        <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" ng-disabled="despachoId == 0 || documentoDespachoAprobado.obtenerImagenes().length == 4 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)" capture/>
+                        <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" ng-disabled="despachoId == 0 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)" capture/>
                     </span>
                 </div>  
             </div>
