--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -3,8 +3,17 @@
         <div class="container">
             <div class="panel panel-default">
                 <div class="panel-body">
-                  
-                
+                    <div class="form-group">
+                        <label  class="col-form-label">Prefijo</label>
+                        <ui-select ng-model="root.prefijo"
+                                   theme="select2"
+                                   class="form-control selectgeneral pull-left col-md-4">
+                            <ui-select-match  placeholder="Seleccionar Prefijo">{{ $select.selected.descripcion}}</ui-select-match>
+                            <ui-select-choices repeat="filtro in root.listarPrefijo | filter:$select.search">
+                                {{ filtro.descripcion}}
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
                 </div>
             </div>
         </div>
