--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -14,6 +14,13 @@
                             </ui-select-choices>
                         </ui-select>
                     </div>
+                    <div class="form-group">
+                        <div class="input-group form-group">
+                            <div class="input-group form-group">
+                                <button class="btn btn-success" ng-click="crearCuenta()" >Crear Cuenta</button>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
