--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -3,22 +3,29 @@
         <div class="container">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <div class="form-group">
-                        <label  class="col-form-label">Prefijo</label>
-                        <ui-select ng-model="root.prefijo"
-                                   theme="select2"
-                                   class="form-control selectgeneral pull-left col-md-4">
-                            <ui-select-match  placeholder="Seleccionar Prefijo">{{ $select.selected.prefijo}}</ui-select-match>
-                            <ui-select-choices repeat="filtro in root.listarPrefijo | filter:$select.search">
-                                {{ filtro.prefijo}}
-                            </ui-select-choices>
-                        </ui-select>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-group form-group">
-                            <div class="input-group form-group">
-                                <button class="btn btn-success" ng-click="crearCuenta()" >Crear Cuenta</button>
-                            </div> 
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <div class="input-group form-group">
+                                    <label  class="col-form-label">&nbsp;</label>
+                                    <div class="input-group form-group">
+                                        <button class="btn btn-success" ng-click="crearCuenta()" >Crear Cuenta</button>
+                                    </div> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label  class="col-form-label">Prefijo</label>
+                                <ui-select ng-model="root.prefijo"
+                                           theme="select2"
+                                           class="form-control selectgeneral pull-left col-md-4">
+                                    <ui-select-match  placeholder="Seleccionar Prefijo">{{ $select.selected.prefijo}}</ui-select-match>
+                                    <ui-select-choices repeat="filtro in root.listarPrefijo | filter:$select.search">
+                                        {{ filtro.prefijo}}
+                                    </ui-select-choices>
+                                </ui-select>
+                            </div>
                         </div>
                     </div>
                 </div>
