--- a/public/dusoft_duana/sincronizacion/css/style.css
+++ b/public/dusoft_duana/sincronizacion/css/style.css
@@ -1,3 +1,31 @@
 .contenedorfiltrocombobox{
     width: 100%;
 }
+
+.contenedor-tipos-cuentas{
+    padding: 10px 15px;
+    border: 1px solid #ddd;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    order-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+}
+
+.titulo-tipo-cuenta{
+    font-size: 16px;
+}
+
+.contenedor-campos{
+    min-height: 35px !important;
+    max-height: 35px !important;
+    padding-left: 0px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.contenedor-campos-label{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
