--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -1,18 +1,20 @@
 <div class="row">    
     <div class="col-md-12 col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <div class="input-group form-group">
-                                <label class="col-form-label">&nbsp;</label>
-                                <div class="input-group form-group">
-                                    <label class="btn btn-success" ng-click="crearCuenta()" ><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Crear Cuenta</label>
-                                </div>
-                            </div>
+        <div class="panel panel-success" style="display: inline-block; float: left; padding: 10px; margin-bottom: 0px; margin-top: 3px;">
+            <div class="panel-body" style="padding: 0px; margin-bottom: 4px;">
+                <div class="col-md-1">
+                    <div class="form-group">
+                        <label class="col-form-label">&nbsp;</label>
+                        <div class="input-group form-group">
+                            <label class="btn btn-success" ng-click="crearCuenta()" ><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Crear Cuenta</label>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-offset-1 col-md-9 panel panel-default" style="padding: 8px; margin-bottom: 15px;">
+            <div class="panel-body">
+                <div class="row">
                     <div class="col-md-2">
                         <div class="form-group">
                             <label class="col-form-label">Prefijo</label>
